--- a/Remote/Base.lproj/Main.storyboard
+++ b/Remote/Base.lproj/Main.storyboard
@@ -16,21 +16,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UPJ-LR-bN4" userLabel="Red Count Label">
+                                <rect key="frame" x="273" y="112" width="55" height="120"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="100"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MES-dT-pOT" userLabel="Count Label">
                                 <rect key="frame" x="273" y="240" width="55" height="120"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                 <color key="textColor" red="0.13725490200000001" green="0.56862745100000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7At-EV-6tc">
+                                <rect key="frame" x="269" y="390" width="63" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Stop">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stop:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FYp-JL-dmf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="7At-EV-6tc" firstAttribute="top" secondItem="MES-dT-pOT" secondAttribute="bottom" constant="30" id="0cu-Gc-dQO"/>
                             <constraint firstAttribute="centerX" secondItem="MES-dT-pOT" secondAttribute="centerX" id="KJW-ov-KhC"/>
+                            <constraint firstItem="7At-EV-6tc" firstAttribute="centerX" secondItem="MES-dT-pOT" secondAttribute="centerX" id="WX7-bH-P79"/>
                             <constraint firstAttribute="centerY" secondItem="MES-dT-pOT" secondAttribute="centerY" id="hK6-L4-TYd"/>
+                            <constraint firstItem="MES-dT-pOT" firstAttribute="top" secondItem="UPJ-LR-bN4" secondAttribute="bottom" constant="8" id="hoD-mj-Ubn"/>
+                            <constraint firstItem="MES-dT-pOT" firstAttribute="centerX" secondItem="UPJ-LR-bN4" secondAttribute="centerX" id="oKi-uU-udc"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="countLabel" destination="MES-dT-pOT" id="oe6-aC-Cwt"/>
+                        <outlet property="redCountLabel" destination="UPJ-LR-bN4" id="XV3-t5-vfK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
