--- a/Remote WatchKit App/Base.lproj/Interface.storyboard
+++ b/Remote WatchKit App/Base.lproj/Interface.storyboard
@@ -12,32 +12,17 @@
                     <items>
                         <group width="1" height="1" alignment="left" layout="vertical" id="gWF-t1-7O3">
                             <items>
-                                <button width="1" height="0.5" alignment="left" title="+" id="V0s-UN-dse">
-                                    <color key="titleColor" red="0.40000000600000002" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.40000000600000002" alpha="0.25" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="font" type="system" weight="medium" pointSize="100"/>
+                                <switch width="1" alignment="left" title="Light" id="2eb-02-dk2">
                                     <connections>
-                                        <action selector="plus" destination="AgC-eL-Hgc" id="hqG-fd-3dH"/>
+                                        <action selector="switchLight:" destination="AgC-eL-Hgc" id="vir-Jj-YQ1"/>
                                     </connections>
-                                </button>
-                                <group width="1" height="0.5" alignment="left" id="6jN-Eb-ScD">
-                                    <items>
-                                        <button width="0.5" height="1" alignment="left" title="-" id="UvP-7i-1y2">
-                                            <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
-                                            <fontDescription key="font" type="system" weight="medium" pointSize="80"/>
-                                            <connections>
-                                                <action selector="minus" destination="AgC-eL-Hgc" id="UTM-tn-bj3"/>
-                                            </connections>
-                                        </button>
-                                        <button width="0.5" height="1" alignment="left" title="Clean" id="MFk-vZ-VK8">
-                                            <fontDescription key="font" type="system" pointSize="15"/>
-                                            <connections>
-                                                <action selector="clean" destination="AgC-eL-Hgc" id="51e-pd-LfK"/>
-                                            </connections>
-                                        </button>
-                                    </items>
-                                </group>
+                                </switch>
+                                <label alignment="center" text="levels" textAlignment="center" id="kVh-Ng-wJ5"/>
+                                <slider width="1" alignment="left" continuous="YES" value="2" minimum="1" maximum="5" steps="4" id="JMt-Ao-Ae1">
+                                    <connections>
+                                        <action selector="changeLightLevels:" destination="AgC-eL-Hgc" id="egX-sV-8yF"/>
+                                    </connections>
+                                </slider>
                             </items>
                         </group>
                     </items>
