add RemoteKit for Config in Demo

--- a/Remote WatchKit App/Base.lproj/Interface.storyboard
+++ b/Remote WatchKit App/Base.lproj/Interface.storyboard
@@ -27,7 +27,7 @@
                         </group>
                     </items>
                     <connections>
-                        <outlet property="lightLevelsSlider" destination="JMt-Ao-Ae1" id="M6h-mi-Rur"/>
+                        <outlet property="lightLevelSlider" destination="JMt-Ao-Ae1" id="VRz-6g-gtH"/>
                         <outlet property="lightStateSwitch" destination="2eb-02-dk2" id="gdf-L6-IKs"/>
                     </connections>
                 </controller>
